# blog

./: .gitignore  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml  yes-hello.html
.github/: update_docs.py
.github/workflows/: python-app-docs.yml
assets/css/: extra.css
assets/js/: extra.js
docs/: index.md  projects.md  writing.md
docs/assets/css/: extra.css
docs/assets/js/: extra.js
docs/post/2022/02/: informacoes-basicas-de-docker.md
docs/post/2022/03/: app-python-django-mysql.md  introducao-ao-rabbitmq-python.md
docs/post/2022/07/: script-para-deploy-de-api-na-aws-lambda.md
docs/post/2023/01/: integracao-elastic-apm-com-python-flask.md  integracao-prometheus-com-python-flask.md  teste-de-stress-api-utilizando-k6.md
docs/post/2023/12/: yes-hello.md
post/2022/02/informacoes-basicas-de-docker/: index.html
post/2022/03/app-python-django-mysql/: index.html
post/2022/03/introducao-ao-rabbitmq-python/: index.html
post/2022/07/script-para-deploy-de-api-na-aws-lambda/: index.html
post/2023/12/yes-hello/: index.html
projects/: index.html
search/: search_index.json
writing/: index.html
